# test-payment-processing-service-ca

./: .coverage  .dockerignore  .dockerignore.test  .env.sample  .gitignore  Dockerfile  Dockerfile.test  README.md  TESTING.md  alembic.ini  docker-compose.db-update.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
k8s/: README.md  backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  configmap.yaml  consumer-deployment.yaml  deploy.sh  ingress.yaml  namespace.yaml  pgbouncer-configmap.yaml  pgbouncer-deployment.yaml  pgbouncer-service.yaml  postgres-service.yaml  postgres-statefulset.yaml  pvc.yaml  rabbitmq-statefulset.yaml  redis-statefulset.yaml  secret.yaml
src/payment_processing_service/: main.py
src/payment_processing_service/application/: exceptions.py  mappers.py
src/payment_processing_service/application/dtos/: payment.py
src/payment_processing_service/application/interfaces/: db_mapper.py  mappers.py  message_broker.py  repositories.py  serialization.py  uow.py  webhooks.py
src/payment_processing_service/application/use_cases/: create_payment.py  execute_payment.py  get_payment_from_repo.py  process_payment.py  process_payment_webhook.py  publish_payment_to_broker.py  save_payment_to_repo.py  send_payment_webhook.py
src/payment_processing_service/config/: app.py  broker.py  circuit_breaker.py  constants.py  consumer.py  cors.py  database.py  enums.py  kafka_broker.py  opentelemetry.py  rabbit_broker.py  redis.py  settings.py  sqlalchemy.py
src/payment_processing_service/domain/: exceptions.py
tests/: conftest.py
tests/application/mappers/: test_payment_mapper.py
tests/application/use_cases/: test_create_payment.py  test_execute_payment.py  test_get_payment_from_repo.py  test_process_payment.py  test_process_payment_webhook.py  test_publish_payment_to_broker.py  test_save_payment_to_repo.py  test_send_payment_webhook.py
tests/domain/entities/: test_payment_entity.py
tests/domain/value_objects/: test_base_value_object.py  test_currency.py  test_payment_status.py
tests/infrastructure/broker/: test_kafka_publisher.py  test_rabbit_publisher.py
tests/infrastructure/db/: test_payment_db_mapper.py  test_payment_repository.py  test_payment_uow.py  test_unit_of_work.py
tests/infrastructure/http/: test_webhook_client.py
tests/infrastructure/mappers/: test_infrastructure_payment_mapper.py
tests/integration/: test_api_dishka.py  test_integration.py
tests/presentation/helpers/: test_custom_json.py
tests/presentation/mappers/: test_payment_presentation_mapper.py
tests/presentation/schemas/: test_schemas.py
(+38 files in other folders)
