[project]
name = "payment-processing-service-ca"
version = "0.1.1"
description = "Test Tasks: Payment Processing Service CA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "idemptx>=0.2.2",
    "isodate>=0.7.2",
    "loguru>=0.7.3",
    "pydantic-i18n>=0.4.5",
    "pydantic-settings>=2.14.2",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-serializer>=1.6.3",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-instrumentation-requests>=0.64b0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "tomlkit>=0.15.0",
    "tomlkit-extras>=0.2.0",
    "dishka>=1.10.1",
    "faststream[kafka]>=0.7.1",
    "faststream-outbox>=0.10.4",
    "dishka-faststream>=0.7.0",
    "stamina>=26.1.0",
    "circuit-breaker-fastapi>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "allure-pytest>=2.16.0",
    "faker>=40.28.1",
    "httpx>=0.28.0",
    "polyfactory>=3.3.0",
    "psycopg[binary]==3.3.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-postgresql>=8.0.0",
    "pytest-rabbitmq>=4.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --alluredir=allure-results"
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require PostgreSQL/RabbitMQ",
    "dependency: Tests that depend on other tests",
    "teardown_timeout: Timeout for test teardown",
    "timeout: Timeout for test execution",
]

[tool.coverage.run]
source = ["src/payment_processing_service"]
omit = [
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "allure-pytest>=2.16.0",
    "faker>=40.28.1",
    "polyfactory>=3.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-postgresql>=8.1.0",
    "pytest-rabbitmq>=4.0.0",
    "pytest-dependency>=0.6.0",
    "pytest-timeout>=2.4.0",
]
